--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
         </div>
     </section>
 
-<!--     <section class="resume">
+    <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 resume__title">Опыт</h2>
             <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
@@ -354,7 +354,7 @@
         </div>
     </section>
 
-    <section class="portfolio">
+<!--     <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 portfolio__title">Портфолио</h2>
             <div class="title title_fz36 portfolio__subtitle">Мои работы</div>
