have done full adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -354,7 +354,7 @@
         </div>
     </section>
 
-<!--     <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 portfolio__title">Портфолио</h2>
             <div class="title title_fz36 portfolio__subtitle">Мои работы</div>
@@ -473,7 +473,7 @@
                     </form>
                 </div>
         </div>
-    </section> -->
+    </section>
 
     <script src="js/script.js"></script>
 </body>
